--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "dev": "webpack --mode development",
+    "watch": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "nodemon": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +21,22 @@
     "url": "https://github.com/nguyenchris/mongo-news-scraper/issues"
   },
   "homepage": "https://github.com/nguyenchris/mongo-news-scraper#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
-    "mongoose": "^5.4.19"
+    "helmet": "^3.16.0",
+    "mongoose": "^5.4.19",
+    "babel-polyfill": "^6.26.0"
   }
 }
