--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "webpack --mode development",
-    "watch": "webpack-dev-server --mode development --open",
+    "watch": "concurrently \"webpack-dev-server --mode development --open \"npm run nodemon",
     "build": "webpack --mode production",
     "nodemon": "nodemon server.js"
   },
@@ -26,17 +26,21 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.19.1",
+    "morgan": "^1.9.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "cheerio": "^1.0.0-rc.2",
+    "compression": "^1.7.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "helmet": "^3.16.0",
-    "mongoose": "^5.4.19",
-    "babel-polyfill": "^6.26.0"
+    "jquery": "^3.3.1",
+    "mongoose": "^5.4.19"
   }
 }
