--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-handlebars": "^3.0.2",
     "helmet": "^3.16.0",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.19"
   }
 }
