--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "webpack --mode development",
-    "watch": "concurrently \"webpack-dev-server --mode development --open \"npm run nodemon",
+    "watch": "concurrently \"webpack-dev-server --mode development --open \"npm nodemon",
     "build": "webpack --mode production",
     "nodemon": "nodemon server.js"
   },
@@ -35,12 +35,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "helmet": "^3.16.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19"
   }
