--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.4",
+    "connect-mongodb-session": "^2.1.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.1",
     "helmet": "^3.16.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
