--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.3",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.4",
     "connect-mongodb-session": "^2.1.1",
